mobile spacing fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -58,7 +58,7 @@ body {
 }
 
 .items {
-    margin-top: 2em;
+    margin-top: 1.25em;
     height: 250px;
     width: 100%;
     padding-right: 1em;
@@ -152,5 +152,5 @@ body {
 #################*/
 .footer {
     text-align: center;
-    margin-top: 0.5em;
+    margin-top: 0.75em;
 }
